# lc4

./: .gitignore  Cargo.toml  README.md
examples/: add.lc4
src/: architecture.rs  assembler.rs  assm_data.rs  controller.rs  encoder.rs  lc4_assembly.rustpeg  lib.rs  processor.rs
src/grammar/: lc4.pegjs
