[package]

name = "lc4"
version = "0.1.1"
authors = ["John P Mayer <john.p.mayer.jr@gmail.com>"]

[lib]
name = "lc4"
path = "src/lib.rs"

[[bin]]
name = "lc4-assemble"
path = "src/bin/lc4-assembler.rs"

[[bin]]
name = "lc4-debug"
path = "src/bin/lc4-debug.rs"

[dependencies]
peg = "0.3.1"
byteorder = "0.3.*"

